test: fix preparation data for stress test, more robust description of possible outcomes
#8